# EIM2

./: .gitmodules  CMakeLists.txt
Host/: CMakeLists.txt  Main.cpp  Main.h
Main/: App.cpp  App.h  CMakeLists.txt  Client.cpp  Client.h  Main.cpp
Render/: App.h  Main.cpp
src/: BrowserApp.cpp  BrowserApp.h  BrowserClient.cpp  BrowserClient.h  BrowserComponent.cpp  BrowserComponent.h  Main.cpp  Main.h  MainComponent.cpp  MainComponent.h  MasterTrack.cpp  MasterTrack.h  PluginWrapper.cpp  PluginWrapper.h  Track.cpp  Track.h
src/Render/: CMakeLists.txt
